<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/one_dark_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvComma"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/period_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPower"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvC"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo" />

    <TextView
        android:id="@+id/tvZero"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/zero_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOne" />

    <TextView
        android:id="@+id/tvEquals"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/cyan_button_resource"
        android:fontFamily="serif"
        android:text="@string/equals_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPower"
        app:layout_constraintTop_toBottomOf="@+id/tvAdd" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/red_button_resource"
        android:fontFamily="serif"
        android:padding="8dp"
        android:text="del"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPI"
        app:layout_constraintTop_toBottomOf="@+id/tvThree" />

    <TextView
        android:id="@+id/tvThree"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/three_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDelete"
        app:layout_constraintEnd_toStartOf="@+id/tvDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPI"
        app:layout_constraintTop_toBottomOf="@+id/tvSix" />

    <TextView
        android:id="@+id/tvOne"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/one_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvZero"
        app:layout_constraintEnd_toStartOf="@+id/tvPI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFour" />

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/cyan_button_resource"
        android:fontFamily="serif"
        android:text="@string/add_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPower"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtract" />

    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/two_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvComma"
        app:layout_constraintEnd_toStartOf="@+id/tvPower"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvC"
        app:layout_constraintTop_toBottomOf="@+id/tvFive" />

    <TextView
        android:id="@+id/tvNine"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/nine_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSix"
        app:layout_constraintEnd_toStartOf="@+id/tvDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPI"
        app:layout_constraintTop_toBottomOf="@+id/tvPower" />

    <TextView
        android:id="@+id/tvSeven"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"

        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/seven_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFour"
        app:layout_constraintEnd_toStartOf="@+id/tvPI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvC" />

    <TextView
        android:id="@+id/tvMultiply"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/cyan_button_resource"
        android:fontFamily="serif"
        android:text="@string/multiply_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPower"
        app:layout_constraintTop_toBottomOf="@+id/tvDivide" />

    <TextView
        android:id="@+id/tvEight"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/eight_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFive"
        app:layout_constraintEnd_toStartOf="@+id/tvPower"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvC"
        app:layout_constraintTop_toBottomOf="@+id/tvPI" />

    <TextView
        android:id="@+id/tvFive"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/five_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTwo"
        app:layout_constraintEnd_toStartOf="@+id/tvPower"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvC"
        app:layout_constraintTop_toBottomOf="@+id/tvEight" />

    <TextView
        android:id="@+id/tvFour"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/four_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvOne"
        app:layout_constraintEnd_toStartOf="@+id/tvPI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeven" />

    <TextView
        android:id="@+id/tvSubtract"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/cyan_button_resource"
        android:fontFamily="serif"
        android:text="@string/minus_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPower"
        app:layout_constraintTop_toBottomOf="@+id/tvMultiply" />

    <TextView
        android:id="@+id/tvSix"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/regular_button_resource"
        android:fontFamily="serif"
        android:text="@string/six_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvThree"
        app:layout_constraintEnd_toStartOf="@+id/tvDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPI"
        app:layout_constraintTop_toBottomOf="@+id/tvNine" />


    <TextView
        android:id="@+id/tvResult"
        android:fontFamily="serif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/result_text_view_resource"
        android:padding="16dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPI"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/cyan_button_resource"
        android:fontFamily="serif"
        android:text="@string/pi_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEight"
        app:layout_constraintEnd_toStartOf="@+id/tvPower"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvC"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvPower"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/cyan_button_resource"
        android:fontFamily="serif"
        android:text="@string/power_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNine"
        app:layout_constraintEnd_toStartOf="@+id/tvDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPI"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvDivide"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/cyan_button_resource"
        android:fontFamily="serif"
        android:text="@string/divide_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPower"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        style="@android:style/Widget.Button"
        android:clickable="false"
        android:id="@+id/tvC"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="0dp"
        android:background="@drawable/green_button_resource"
        android:fontFamily="serif"
        android:text="@string/c_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSeven"
        app:layout_constraintEnd_toStartOf="@+id/tvPI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

</androidx.constraintlayout.widget.ConstraintLayout>